[metadata]
name = etrs-itrs
author = Michiel Brentjens
author_email = brentjens@astron.nl
version = file: VERSION
description = A python tool to convert ETRS to ITRF coordinates.
long_description = file: README
long_description_content_type = text/text
url = https://github.com/brentjens/etrs-itrs
license = Apache License 2.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy

[options]
include_package_data = true
packages = etrsitrs
python_requires = >=3.6
install_requires =
    importlib-metadata>=0.12;python_version<"3.8"
    numpy
